xr-extra系の記述を削除

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene portal livestream landing-page xrextras-loading xrextras-runtime-error xrextras-tap-recenter xrweb>
+    <a-scene>
         <!-- We can define assets here to be loaded when A-Frame initializes -->
         <a-assets>
             <img id="field" src="./assets/field.jpg" />
@@ -40,18 +40,18 @@
 
         <!-- Hider walls -->
         <a-entity id="hider-walls">
-            <a-box scale="6 100 1" position="0 57 0" xrextras-hider-material></a-box>
-            <a-box scale="94 100 1" position="-50 50 0" xrextras-hider-material></a-box>
-            <a-box scale="94 100 1" position="50 50 0" xrextras-hider-material></a-box>
-            <a-box scale="200 100 1" position="0 50 200" xrextras-hider-material></a-box>
-            <a-box scale="200 1 201" position="0 100 100" xrextras-hider-material></a-box>
-            <a-box scale="200 1 199" position="0 -0.5 100" xrextras-hider-material></a-box>
-            <a-box scale="1 100 200" position="-100 50 100" xrextras-hider-material></a-box>
-            <a-box scale="1 100 200" position="100 50 100" xrextras-hider-material></a-box>
+            <a-box scale="6 100 1" position="0 57 0"></a-box>
+            <a-box scale="94 100 1" position="-50 50 0"></a-box>
+            <a-box scale="94 100 1" position="50 50 0"></a-box>
+            <a-box scale="200 100 1" position="0 50 200"></a-box>
+            <a-box scale="200 1 201" position="0 100 100"></a-box>
+            <a-box scale="200 1 199" position="0 -0.5 100"></a-box>
+            <a-box scale="1 100 200" position="-100 50 100"></a-box>
+            <a-box scale="1 100 200" position="100 50 100"></a-box>
         </a-entity>
 
         <a-entity id="portal-wall">
-            <a-plane scale="4 6 1" rotation="180 0 0" position="0 3 0.5" xrextras-hider-material></a-plane>
+            <a-plane scale="4 6 1" rotation="180 0 0" position="0 3 0.5"></a-plane>
         </a-entity>
 
         <!-- <a-entity
